--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
     "author": "sergio",
     "scripts": {
         "start": "electron-webpack dev",
-        "prod": "electron-webpack renderer",
-        "server": "renderer",
+        "compile": "electron-webpack",
+        "run-compile": "electron ./dist/main/main.js",
         "dist": "yarn compile && electron-builder",
         "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null"
     },
     "dependencies": {
-        "preact": "^8.2.5",
+        "react": "^16.0.0",
+        "react-dom": "^16.0.0",
         "react-router-dom": "^4.2.2",
         "source-map-support": "^0.4.17"
     },
     "devDependencies": {
-        "babel-plugin-transform-react-jsx": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "css-loader": "^0.28.7",
         "electron": "^1.7.6",
         "electron-builder": "^19.27.7",
         "electron-webpack": "^1.5.0",
+        "node-sass": "^4.5.3",
+        "sass-loader": "^6.0.6",
         "webpack": "^3.5.6"
     }
 }
