--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null"
     },
     "dependencies": {
+        "prop-types": "^15.6.0",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
         "react-router-dom": "^4.2.2",
-        "source-map-support": "^0.4.17"
+        "source-map-support": "^0.4.17",
+        "synaptic": "^1.1.4"
     },
     "devDependencies": {
         "babel-preset-react": "^6.24.1",
