--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null"
     },
     "dependencies": {
+        "npm": "^5.5.1",
         "prop-types": "^15.6.0",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
