--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "babel-preset-react": "^6.24.1",
         "electron": "^1.7.6",
         "electron-builder": "^19.27.7",
+        "electron-devtools-installer": "^2.2.1",
         "electron-webpack": "^1.5.0",
         "node-sass": "^4.5.3",
         "sass-loader": "^6.0.6",
