--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
         "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null"
     },
     "dependencies": {
+        "cookie-parser": "^1.4.3",
+        "morgan": "^1.9.0",
         "prop-types": "^15.6.0",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
         "react-router-dom": "^4.2.2",
         "react-table": "^6.7.4",
+        "serve-favicon": "^2.4.5",
         "source-map-support": "^0.5.0",
         "synaptic": "^1.1.4"
     },
