--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "author": "sergio",
     "scripts": {
         "start": "electron-webpack dev",
+        "server": "nodemon ./server/app.js",
         "compile": "electron-webpack",
         "run-compile": "electron ./dist/main/main.js",
         "dist": "yarn compile && electron-builder",
@@ -21,6 +22,7 @@
         "react-router-dom": "^4.2.2",
         "react-table": "^6.7.4",
         "serve-favicon": "^2.4.5",
+        "socket.io": "^2.0.4",
         "source-map-support": "^0.5.0",
         "synaptic": "^1.1.4"
     },
@@ -31,6 +33,7 @@
         "electron-devtools-installer": "^2.2.1",
         "electron-webpack": "^1.11.0",
         "node-sass": "^4.5.3",
+        "nodemon": "^1.12.1",
         "sass-loader": "^6.0.6",
         "webpack": "^3.8.1"
     }
