--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
         "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null"
     },
     "dependencies": {
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "cookie-parser": "^1.4.3",
         "morgan": "^1.9.0",
         "prop-types": "^15.6.0",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
+        "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.2",
         "react-table": "^6.7.4",
+        "redux": "^3.7.2",
+        "redux-devtools-extension": "^2.13.2",
+        "redux-logger": "^3.0.6",
         "serve-favicon": "^2.4.5",
         "socket.io": "^2.0.4",
         "source-map-support": "^0.5.0",
