--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null"
     },
     "dependencies": {
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "cookie-parser": "^1.4.3",
         "morgan": "^1.9.0",
         "prop-types": "^15.6.0",
@@ -32,11 +31,17 @@
         "synaptic": "^1.1.4"
     },
     "devDependencies": {
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-preset-react": "^6.24.1",
         "electron": "^1.7.9",
         "electron-builder": "^19.43.4",
         "electron-devtools-installer": "^2.2.1",
         "electron-webpack": "^1.11.0",
+        "eslint": "^4.11.0",
+        "eslint-config-airbnb": "^16.1.0",
+        "eslint-plugin-import": "^2.8.0",
+        "eslint-plugin-jsx-a11y": "^6.0.2",
+        "eslint-plugin-react": "^7.4.0",
         "node-sass": "^4.5.3",
         "nodemon": "^1.12.1",
         "sass-loader": "^6.0.6",
