configuracion server y websockets

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
         "indent": ["error", 4],
         "react/jsx-indent": ["error", 4],
         "react/jsx-indent-props": ["error", 4],
-        "no-console": "warn",
+        "no-console": "off",
         "no-unused-vars": "warn",
         "react/jsx-filename-extension": ["error", { "extensions": [".js"] }]
     }
