--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "author": "sergio",
     "scripts": {
         "start": "electron-webpack dev",
-        "server": "nodemon ./server/app.js",
+        "server": "nodemon --inspect ./server/app.js",
         "compile": "electron-webpack",
         "run-compile": "electron ./dist/main/main.js",
         "dist": "yarn compile && electron-builder",
