--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "electron": "^1.7.9",
         "express": "^4.16.2",
         "morgan": "^1.9.0",
+        "node-fetch": "^1.7.3",
         "prop-types": "^15.6.0",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
